--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -8,22 +8,49 @@ overrides the 1st layer from "style.css".
 /*/////  OVERRIDES  /////*/
 
 .global-wrapper {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  max-width: auto;
+  padding: 0;
+}
+
+.post-list-item {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+article.blog-post {
+  padding: 24px 0;
+  margin: 0;
+}
+
+/*/////  CUSTOM CLASSES  /////*/
+
+.main-layout {
   max-width: 360px;
   padding: 8px;
 }
 
 
-
-/*/////  CUSTOM CLASSES  /////*/
-
+.main-layout > .header {
+  margin-bottom: 8px;
+}
 .header-content {
   display: flex;
 }
 .header-icon-wrapper {
-  flex: 0 0 48px;
+  flex: 0 0 calc(48px + 8px);
+}
+.header-icon {
+  width: 48px;
 }
 .header-text-wrapper {
   flex: 1 1 auto;
+}
+.header-text {
+  font-size: 0.8rem;
+  line-height: 0.9rem;
 }
 
 
@@ -32,10 +59,30 @@ overrides the 1st layer from "style.css".
   justify-content: space-between;
 }
 .navigation-button {
-  flex: 0 0 auto;
+  flex: 0 0 32px;
+}
+.navigation-icon {
+  width: 32px;
+}
+
+.home-feed {
+  padding: 0;
 }
 
 
+.card {
+  height: 229px;
+  width: 344px;
+  margin: 0 0 8px 0;
+}
+
+
+.main-layout > .footer {
+  margin-top: 8px;
+}
+.footer-text-wrapper {
+  margin: 16px 0;
+}
 
 /*/////  UTILITY CLASSES FOR DEVELOPER CONVENIENCE  /////*/
 
