--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -13,7 +13,7 @@ overrides the 1st layer from "style.css".
   width: 100%;
   height: 100%;
   margin: 0;
-  max-width: auto;
+  max-width: initial;
   padding: 0;
   background-color: #668;
 }
@@ -42,9 +42,27 @@ nav.blog-post-nav {
   margin: 0;
 }
 
+.main-container {
+  max-width: 360px;
+  margin: 0 auto;
+  padding: 0 8px;
+}
+
+.home-feed {
+  padding: 0;
+}
+
 
 .main-layout > .header {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+  background-color: rgba(255, 0, 0, 0.4);
+}
+.header .header-nav-background {
+  width: 100%;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 64px;
 }
 .main-layout .header-container {
   max-width: 360px;
@@ -71,12 +89,11 @@ nav.blog-post-nav {
 }
 
 
+
 .navigation-row {
-  background-color: rgba(0, 0, 0, 0.2);
   position: relative;
   padding: 4px 0;
 }
-
 .nav-btn-container {
   height: 32px;
   display: flex;
@@ -89,64 +106,63 @@ nav.blog-post-nav {
   width: 32px;
 }
 
-.main-container {
-  max-width: 360px;
-  margin: 0 auto;
-  padding: 0 8px;
-}
-
-.home-feed {
-  padding: 0;
-}
 
 
 .card {
   height: 229px;
   width: 344px;
-  margin: 0 0 8px 0;
+  margin: 0 0 16px 0;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
 }
-
 .card .card-image {
   height: 229px;
   width: 344px;
 }
-
 .card .card-image-wrapper,
 .card .card-content {
   position: absolute;
 }
-
 .card .card-content {
   width: 66%;
   right: 0;
   bottom: 0;
   font-size: 0.8rem;
   background-color: rgba(255, 255, 255, 0.6);
-  padding: 8px;
+  padding: 6px;
 }
-
 .card header,
 .card h2 {
   margin-bottom: 8px;
 }
-
 .card h2 {
   font-size: 1.5rem;
 }
 
 
+
 .main-layout > .footer {
   margin-top: 8px;
+  padding: 0 0 4px 0;
+  background-color: rgba(255, 0, 0, 0.4);
+  position: relative;
 }
-.main-layout .footer-container {
+.footer .footer-nav-background {
+  width: 100%;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+}
+.footer .footer-container {
   max-width: 360px;
   margin: 0 auto;
   padding: 0 8px;
 }
-.footer-text-wrapper {
+.footer .footer-text-wrapper {
   margin: 16px 0;
+}
+.footer .footer-text {
+  font-size: 1rem;
 }
 
 
