--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -9,6 +9,15 @@ overrides the 1st layer from "style.css".
 
 /*/////  OVERRIDES  /////*/
 
+:root {
+  --fontFamily-sans: "Open Sans", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --fontFamily-monospace: Consolas, monaco, "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+  --font-body: var(--fontFamily-sans);
+  --font-heading: var(--fontFamily-monospace);
+}
+
 .global-wrapper {
   width: 100%;
   height: 100%;
@@ -26,20 +35,49 @@ overrides the 1st layer from "style.css".
 article.blog-post {
   padding: 16px 12px;
   margin: 0;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--color-post-content-blastoise);
 }
 nav.blog-post-nav {
   padding: 0 12px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--color-post-content-blastoise);
+}
+.blog-post .blog-post-title{
+  color: var(--color-highlight-blastoise);
+}
+.blog-post h1,
+.blog-post h2,
+.blog-post h3,
+.blog-post h4,
+.blog-post h5,
+.blog-post h6 {
+  color: #dddddd;
+}
+.blog-post blockquote {
+  color: #cccccc;
 }
 
+.blog-post-nav .blog-post-nav-links {
+  color: var(--color-highlight-blastoise);
+  text-decoration: none;
+}
 
+a {
+  color: var(--color-highlight-blastoise);
+}
 
 /*/////  CUSTOM CLASSES  /////*/
+
+:root {
+  --color-header-blastoise: rgba(0, 0, 0, 0.125);
+  --color-post-content-blastoise: rgba(74, 74, 74, 0.92);
+  --color-highlight-blastoise: #D5AC4A;
+}
 
 .main-layout {
   padding: 0;
   margin: 0;
+  background-color: #083962;
+  color: #FFFFFF;
 }
 
 .main-container {
@@ -55,13 +93,13 @@ nav.blog-post-nav {
 
 
 .main-layout > .header {
-  margin-bottom: 16px;
-  background-color: rgba(255, 0, 0, 0.4);
+  margin-bottom: 8px;
+  background-color: #083962;
 }
 .header .header-nav-background {
   width: 100%;
   height: 40px;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--color-header-blastoise);
   position: absolute;
   top: 64px;
 }
@@ -76,7 +114,7 @@ nav.blog-post-nav {
   height: 64px;
 }
 .header-icon-wrapper {
-  flex: 0 0 calc(48px + 8px);
+  flex: 0 0 calc(48px + 16px);
 }
 .header-icon {
   width: 48px;
@@ -84,9 +122,14 @@ nav.blog-post-nav {
 .header-text-wrapper {
   flex: 1 1 auto;
 }
+.header-title {
+  margin: 0;
+  color: var(--color-highlight-blastoise);
+  line-height: 1;
+}
 .header-text {
   font-size: 0.8rem;
-  line-height: 0.9rem;
+  line-height: 1;
 }
 
 
@@ -112,7 +155,7 @@ nav.blog-post-nav {
 .card {
   height: 229px;
   width: 344px;
-  margin: 0 0 16px 0;
+  margin: 0 0 8px 0;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
 }
@@ -129,8 +172,8 @@ nav.blog-post-nav {
   right: 0;
   bottom: 0;
   font-size: 0.8rem;
-  background-color: rgba(255, 255, 255, 0.6);
-  padding: 6px;
+  background-color: var(--color-post-content-blastoise);
+  padding: 12px;
 }
 .card header,
 .card h2 {
@@ -139,19 +182,26 @@ nav.blog-post-nav {
 .card h2 {
   font-size: 1.5rem;
 }
-
+.card h1,
+.card h2,
+.card h3,
+.card h4,
+.card h5,
+.card h6 {
+  color: var(--color-highlight-blastoise);
+}
 
 
 .main-layout > .footer {
   margin-top: 8px;
   padding: 0 0 4px 0;
-  background-color: rgba(255, 0, 0, 0.4);
+  background-color: #083962;
   position: relative;
 }
 .footer .footer-nav-background {
   width: 100%;
   height: 40px;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--color-header-blastoise);
   position: absolute;
 }
 .footer .footer-container {
