--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -71,6 +71,10 @@ a {
   --color-header-blastoise: rgba(0, 0, 0, 0.25);
   --color-post-content-blastoise: rgba(74, 74, 74, 0.92);
   --color-highlight-blastoise: #D5AC4A;
+
+  --space-unit: 16px;
+  --space-unit-sm: 8px;
+  --space-unit-xs: 4px;
 }
 
 .main-layout {
@@ -84,7 +88,7 @@ a {
   max-width: 360px;
   min-height: 80vh;
   margin: 0 auto;
-  padding: 0 8px;
+  padding: 0 var(--space-unit);
 }
 
 .home-feed {
@@ -98,7 +102,7 @@ a {
 
 
 .main-layout > .header {
-  margin-bottom: 8px;
+  margin-bottom: var(--space-unit);
   background-color: #083962;
   background-image: url("images/backgrounds/noisy-grid-dark.png");
   background-repeat: repeat;
@@ -106,20 +110,20 @@ a {
 }
 .header .header-nav-background {
   width: 100%;
-  height: 32px;
+  height: 40px;
   background-color: var(--color-header-blastoise);
   position: absolute;
-  top: 64px;
+  top: calc(64px + var(--space-unit));
 }
 .main-layout .header-container {
   max-width: 360px;
   margin: 0 auto;
-  padding: 0 8px;
+  padding: 0 var(--space-unit);
 }
 .header-content {
-  padding: 8px 0;
+  padding: var(--space-unit) 0;
   display: flex;
-  height: 64px;
+  height: calc(64px + var(--space-unit));
 }
 .header-icon-wrapper {
   flex: 0 0 calc(48px + 16px);
@@ -147,7 +151,8 @@ a {
   padding: 4px 0;
 }
 .nav-btn-container {
-  height: 24px;
+  padding: var(--space-unit-xs) 0;
+  height: 32px;
   display: flex;
   justify-content: space-between;
 }
@@ -166,7 +171,7 @@ a {
 .card {
   height: 229px;
   width: 344px;
-  margin: 0 0 8px 0;
+  margin: 0 0 var(--space-unit) 0;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
 }
@@ -223,7 +228,7 @@ a {
 .footer .footer-container {
   max-width: 360px;
   margin: 0 auto;
-  padding: 0 8px;
+  padding: 0 var(--space-unit);
 }
 .footer .footer-text-wrapper {
   margin: 16px 0;
