--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -73,8 +73,16 @@ a {
   --color-highlight-blastoise: #D5AC4A;
 
   --space-unit: 16px;
-  --space-unit-sm: 8px;
-  --space-unit-xs: 4px;
+  --space-unit-sm: calc(var(--space-unit) / 2);
+  --space-unit-xs: calc(var(--space-unit) / 4);
+
+  --max-width-xs: 360px;
+
+  --header-icon-height: 72px;
+  --header-height: calc(var(--header-icon-height) + (var(--space-unit) * 2));
+
+  --toolbar-button-width: 32px;
+  --toolbar-height: calc(var(--toolbar-button-width) + var(--space-unit));
 }
 
 .main-layout {
@@ -85,7 +93,7 @@ a {
 }
 
 .main-container {
-  max-width: 360px;
+  max-width: var(--max-width-xs);
   min-height: 80vh;
   margin: 0 auto;
   padding: 0 var(--space-unit);
@@ -99,6 +107,10 @@ a {
   color: var(--color-highlight-blastoise);
 }
 
+.text-fade {
+  opacity: 0.25;
+}
+
 
 
 .main-layout > .header {
@@ -106,30 +118,30 @@ a {
   background-color: #083962;
   background-image: url("images/backgrounds/noisy-grid-dark.png");
   background-repeat: repeat;
-  border-bottom: 2px white dashed;
+  border-bottom: 1px white solid;
 }
 .header .header-nav-background {
   width: 100%;
-  height: 40px;
+  height: var(--toolbar-height);
   background-color: var(--color-header-blastoise);
   position: absolute;
-  top: calc(64px + var(--space-unit));
+  top: var(--header-height)
 }
 .main-layout .header-container {
-  max-width: 360px;
+  max-width: var(--max-width-xs);
   margin: 0 auto;
   padding: 0 var(--space-unit);
 }
 .header-content {
   padding: var(--space-unit) 0;
   display: flex;
-  height: calc(64px + var(--space-unit));
+  height: var(--header-height)
 }
 .header-icon-wrapper {
-  flex: 0 0 calc(48px + 16px);
+  flex: 0 0 calc(var(--header-icon-height) + var(--space-unit));
 }
 .header-icon {
-  width: 48px;
+  width: var(--header-icon-height);
 }
 .header-text-wrapper {
   flex: 1 1 auto;
@@ -137,33 +149,38 @@ a {
 .header-title {
   margin: 0;
   color: var(--color-highlight-blastoise);
+  font-size: 2.5rem;
   line-height: 1;
 }
 .header-text {
   font-size: 0.8rem;
   line-height: 1;
+  position: relative;
+  display: inline-block;
+  bottom: var(--space-unit-sm);
+  letter-spacing: 1.25px;
 }
 
 
 
-.navigation-row {
+.navigation-toolbar {
   position: relative;
-  padding: 4px 0;
+  padding: var(--space-unit-sm) 0;
+  height: var(--toolbar-height);
 }
 .nav-btn-container {
-  padding: var(--space-unit-xs) 0;
-  height: 32px;
   display: flex;
   justify-content: space-between;
 }
 .navigation-button {
-  flex: 0 0 24px;
+  flex: 0 0 var(--toolbar-button-width);
 }
 .navigation-button.disabled {
   opacity: 0.17;
 }
 .navigation-icon {
-  width: 24px;
+  width: var(--toolbar-button-width);
+  height: var(--toolbar-button-width);
 }
 
 
@@ -211,33 +228,36 @@ a {
 
 
 .main-layout > .footer {
-  margin-top: 8px;
-  padding: 0 0 4px 0;
+  padding: 0 0 var(--space-unit-xs) 0;
   background-color: #083962;
   background-image: url("images/backgrounds/noisy-grid-dark.png");
   background-repeat: repeat;
-  border-top: 2px white dashed;
+  border-top: 1px white solid;
   position: relative;
 }
 .footer .footer-nav-background {
   width: 100%;
-  height: 40px;
+  height: var(--toolbar-height);
   background-color: var(--color-header-blastoise);
   position: absolute;
 }
 .footer .footer-container {
-  max-width: 360px;
+  max-width: var(--max-width-xs);
   margin: 0 auto;
   padding: 0 var(--space-unit);
 }
 .footer .footer-text-wrapper {
-  margin: 16px 0;
+  margin: var(--space-unit) 0;
 }
 .footer .footer-text {
   font-size: 0.8rem;
   line-height: 1;
+  letter-spacing: 1.25px;
 }
 
+.footer .footer-text-small {
+  vertical-align: super;
+}
 
 
 /*/////  UTILITY CLASSES FOR DEVELOPER CONVENIENCE  /////*/
