--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -71,6 +71,7 @@ a {
   --color-header-blastoise: rgba(0, 0, 0, 0.25);
   --color-post-content-blastoise: rgba(74, 74, 74, 0.92);
   --color-highlight-blastoise: #D5AC4A;
+  --color-bg-blastoise: #083962;
 
   --space-unit: 16px;
   --space-unit-sm: calc(var(--space-unit) / 2);
@@ -78,18 +79,20 @@ a {
 
   --basic-line: 1px white solid;
   --max-width-xs: 360px;
-
+  
   --header-icon-height: 72px;
   --header-height: calc(var(--header-icon-height) + (var(--space-unit) * 2));
-
+  
   --toolbar-button-width: 32px;
   --toolbar-height: calc(var(--toolbar-button-width) + var(--space-unit));
+  
+  --content-border-line: var(--space-unit-xs) var(--color-bg-blastoise) solid;
 }
 
 .main-layout {
   padding: 0;
   margin: 0;
-  background-color: #083962;
+  background-color: var(--color-bg-blastoise);
   color: #FFFFFF;
 }
 
@@ -129,7 +132,7 @@ a {
 
 .main-layout > .header {
   /* margin-bottom: var(--space-unit); */
-  background-color: #083962;
+  background-color: var(--color-bg-blastoise);
   background-image: url("images/backgrounds/noisy-grid-dark.png");
   background-repeat: repeat;
   border-bottom: var(--basic-line);
@@ -206,8 +209,18 @@ a {
   margin: 0 0 var(--space-unit) 0;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
+  /* overflow: hidden; */
 }
 .card .card-image {
+  /* width: 100%;
+  min-height:100%;
+  min-width: 100%; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.card .card-image-wrapper {
+  height: 100%;
   width: 100%;
 }
 .card .card-image-wrapper,
@@ -222,7 +235,9 @@ a {
   background-color: var(--color-post-content-blastoise);
   background-image: url("images/backgrounds/buried.png");
   background-repeat: repeat;
-  padding: 12px;
+  padding: var(--space-unit);
+  border-top: var(--content-border-line);
+  border-left: var(--content-border-line);
 }
 .card header,
 .card h2 {
@@ -243,7 +258,7 @@ a {
 
 .main-layout > .footer {
   padding: 0 0 var(--space-unit-xs) 0;
-  background-color: #083962;
+  background-color: var(--color-bg-blastoise);
   background-image: url("images/backgrounds/noisy-grid-dark.png");
   background-repeat: repeat;
   border-top: var(--basic-line);
