--- a/src/rj-style.css
+++ b/src/rj-style.css
@@ -69,7 +69,7 @@ a {
 
 :root {
   --color-header-blastoise: rgba(0, 0, 0, 0.25);
-  --color-post-content-blastoise: rgba(74, 74, 74, 0.88);
+  --color-post-content-blastoise: rgba(74, 74, 74, 0.94);
   --color-highlight-blastoise: #D5AC4A;
   --color-bg-blastoise: #083962;
 
@@ -77,6 +77,7 @@ a {
   --space-unit-3q: calc(var(--space-unit) * 0.75);
   --space-unit-sm: calc(var(--space-unit) / 2);
   --space-unit-xs: calc(var(--space-unit) / 4);
+  --space-cards: calc(var(--space-unit) * 2);
 
   --text-size-sm: 0.8rem;
 
@@ -108,7 +109,7 @@ a {
 }
 
 .home-feed {
-  padding: var(--space-unit) 0;
+  padding: var(--space-cards) 0;
 }
 /* removes bottom margin for last card in the home feed */
 .home-feed > div:last-of-type {
@@ -212,10 +213,20 @@ a {
 .card {
   padding-bottom: 67%;
   width: 100%;
-  margin: 0 0 var(--space-unit) 0;
+  margin: 0 0 var(--space-cards) 0;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
   /* overflow: hidden; */
+}
+.card .card-background {
+  background-image: url("images/backgrounds/tight-hatch.svg");
+  background-repeat: repeat;
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: var(--space-unit-sm);
+  top: var(--space-unit-3q);
 }
 .card .card-image {
   /* width: 100%;
@@ -240,7 +251,7 @@ a {
   font-size: var(--text-size-sm);
   letter-spacing: 0.25px;
   background-color: var(--color-post-content-blastoise);
-  background-image: url("images/backgrounds/buried.png");
+  /* background-image: url("images/backgrounds/buried.png"); */
   background-repeat: repeat;
   padding: var(--space-unit-sm);
   border-top: var(--content-border-line);
