--- a/static/apps/autocomposer/doc/css/prettify-tomorrow.css
+++ b/static/apps/autocomposer/doc/css/prettify-tomorrow.css
@@ -98,7 +98,7 @@
 /*
 pre.prettyprint {
   background: white;
-  font-family: Consolas, Monaco, 'Andale Mono', monospace;
+  font-family: "Inconsolata", Monaco, 'Andale Mono', monospace;
   font-size: 12px;
   line-height: 1.5;
   border: 1px solid #ccc;
