--- a/src/styles/rj-style.css
+++ b/src/styles/rj-style.css
@@ -140,8 +140,9 @@ a {
   color: var(--color-highlight-blastoise);
 }
 
-.text-fade {
+.text-spacer {
   opacity: 0.25;
+  margin: 0 0.25rem;
 }
 
 .threejs-viz-container {
