--- a/src/styles/rj-style.css
+++ b/src/styles/rj-style.css
@@ -50,7 +50,10 @@ overrides the 1st layer from "style.css".
   --header-height: calc(var(--header-icon-height) + (var(--space-unit) * 2));
   
   --toolbar-button-width: 24px;
+  --toolbar-button-gutter: calc(var(--toolbar-button-width) / 2);
   --toolbar-height: calc(var(--toolbar-button-width) + var(--space-unit));
+  --toolbar-left-width: calc(var(--toolbar-button-width) * 3 + var(--toolbar-button-gutter) * 2);
+  --toolbar-right-width: calc(var(--toolbar-button-width) * 2 + var(--toolbar-button-gutter));
   
   /* --content-border-line: 1px var(--color-highlight-blastoise) solid; */
   --content-border-line: 1px rgba(255, 255, 255, 0.5) solid;
