--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -4,7 +4,6 @@
   margin: 0 0 var(--space-cards) 0;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
-  /* overflow: hidden; */
 }
 .card .card-background {
   background-image: url("../images/backgrounds/tight-hatch.svg");
@@ -17,9 +16,6 @@
   top: var(--space-unit-3q);
 }
 .card .card-image {
-  /* width: 100%;
-  min-height:100%;
-  min-width: 100%; */
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -39,21 +35,38 @@
   font-size: var(--text-size-sm);
   letter-spacing: 0.25px;
   background-color: var(--color-post-content-blastoise);
-  /* background-image: url("../images/backgrounds/buried.png"); */
   background-repeat: repeat;
-  padding: var(--space-unit-sm);
   border-top: var(--content-border-line);
   border-left: var(--content-border-line);
 }
-.card header,
+.card-content header {
+  border-bottom: var(--basic-line);
+  padding: var(--space-unit-sm);
+  margin-bottom: 0;
+}
+.card-content section {
+  padding: var(--space-unit-sm);
+}
+
 .card .card-title {
   margin-bottom: var(--space-unit-sm);
-}
-.card .card-title {
   font-size: 1.4rem;
+  line-height: 1.1;
   font-weight: normal;
   letter-spacing: 0.75px;
+  margin-bottom: var(--space-unit-xs);
 }
+
+.card-data {
+  font-size: var(--text-size-sm);
+  line-height: 1.3;
+  font-family: var(--fontFamily-monospace);
+  text-transform: uppercase;
+}
+.card-category {
+  color: var(--color-highlight-blastoise);
+}
+
 .card h1,
 .card h2,
 .card h3,
