--- a/src/styles/rj-style.css
+++ b/src/styles/rj-style.css
@@ -153,6 +153,12 @@ a {
 .page-layout h6 {
   color: #dddddd;
 }
+.page-layout h3,
+.page-layout h4,
+.page-layout h5,
+.page-layout h6 {
+  font-weight: normal;
+}
 .page-layout h1:first-of-type {
   letter-spacing: var(--main-title-spacing);
   color: var(--color-highlight-blastoise);
@@ -174,9 +180,6 @@ a {
 }
 
 .threejs-viz-container .resp-iframe {
-  /* position: absolute; */
-  /* top: 0;
-  left: 0; */
   width: 100%;
   height: 100%;
   border: 0;
