--- a/src/styles/rj-style.css
+++ b/src/styles/rj-style.css
@@ -176,15 +176,11 @@ a {
 }
 
 .threejs-viz-container {
-  margin-bottom: var(--space-unit);
-}
-
-.threejs-viz-container .resp-iframe {
+  margin-bottom: var(--spacing-8);
+  position: relative;
   width: 100%;
-  height: 100%;
-  border: 0;
+  padding-bottom: 67%;
 }
-
 
 .about-layout h1,
 .about-layout h2,
