--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -64,7 +64,9 @@
   text-transform: uppercase;
 }
 .card-category {
-  color: var(--color-highlight-blastoise);
+  color: var(--color-text-highlight);
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .card h1,
